--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://yassirbn.github.io/football-bingo",
   "private": true,
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.10.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
